--- a/yon_auction/package.json
+++ b/yon_auction/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "better-sqlite3": "^12.5.0",
     "express": "^5.2.1",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
